@@ -30,6 +30,7 @@ Bug fixes
  * Draftail now supports features specified via the ``WAGTAILADMIN_RICH_TEXT_EDITORS`` setting (Todd Dembrey)
  * Password reset form no longer indicates whether the email is recognised, as per standard Django behaviour (Bertrand Bordage)
  * ``UserAttributeSimilarityValidator`` is now correctly enforced on user creation / editing forms (Tim Heap)
+ * Focal area removal not working in IE11 and MS Edge (Thibaud Colas)
 
 
 Upgrade considerations
